--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -1,18 +1,19 @@
 name: CI
 
 on:
-  push:  
+  push:  null
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
     - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      run: | 
+         pip install -r requirements.txt
